[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["KelfinTDetonator <kelfinantoni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.0"
arrr = "^1.0.5"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
